--- a/Hopsi.Web/Hopsi.Web.csproj
+++ b/Hopsi.Web/Hopsi.Web.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Hopsi.Infrastructure\Hopsi.Infrastructure.csproj" />
   </ItemGroup>
 
+	<Target Name="Tailwind" BeforeTargets="Build">
+		<Exec Command="npm run tw:dev"/>
+	</Target>
+
 </Project>
