--- a/Hopsi.Web/package.json
+++ b/Hopsi.Web/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.15"
   },
   "scripts": {
-    "tw:dev": "npx tailwindcss -i ./wwwroot/css/input.css -o ./wwwroot/css/output.css --watch --minify"
+    "tw:dev": "npx tailwindcss -i ./wwwroot/css/input.css -o ./wwwroot/css/output.css --minify"
+  },
+  "-vs-binding": {
+    "BeforeBuild": [
+      "tw:dev"
+    ]
   }
 }
