refactored project to be just api, started on auth/tokens

--- a/Hopsi.Web/appsettings.json
+++ b/Hopsi.Web/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost; Port=5432; Database=Hospi; Username=postgres; Password=sixiepoes",
     "HopsiWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Hopsi.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtOptions": {
+    "ValidIssuer": "HospiApp",
+    "ValidAudience": "https://localhost:44368",
+    "SecretKey": "Myhospisecretkeythatislongenoughtobesafe",
+    "ExpiryMinutes": "30",
+    "RefreshTokenExpiryTime": "60"
   }
 }
